# zring_cpp

./: CMakeLists.txt  Makefile  README.md
src/: CMakeLists.txt
src/common/: command_line.h
src/crypto/: crypto-ops.c  crypto-ops.h  crypto-sugar.h  crypto.h  hash.h
tests/: CMakeLists.txt
tests/functional_tests/: crypto_tests.cpp  helpers.h  main.cpp
utils/: configure_win64_msvs2017.cmd
